# meshgen

./: CMakeLists.txt
res/shader/: screen.frag  screen.vert  shad.frag  shad.vert
src/: cglm.h  dynarr.h  framebuffer.c  framebuffer.h  geoutil.c  geoutil.h  main.c  material.c  material.h  mesh.c  mesh.h  polygon.c  polygon.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  util.c  util.h
